--- a/src/App.css
+++ b/src/App.css
@@ -2,32 +2,28 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+form {
+  display: inline-block;
+  background: rgb(33, 33, 33);
+  padding: 1rem;
+  border-radius: 10px;
+  margin-top: 2rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.field {
+  margin-bottom: 0.5rem;
+}
+
+.checkbox {
   color: white;
+  margin-bottom: 1rem;
+  display: flex;
+  align-items: baseline;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.checkbox input {
+  background: white;
+  position: relative;
+  top: 2px;
+  left: 5px;
 }
