--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,12 @@ form {
   padding: 1rem;
   border-radius: 10px;
   margin-top: 2rem;
+  margin-bottom: 3rem;
 }
 
 .field {
   margin-bottom: 0.5rem;
+  color: pink;
 }
 
 .checkbox {
