drop-down mostly done: need to add error message

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,11 @@ form {
   color: pink;
 }
 
+.field select {
+  width: 68%;
+  color: grey;
+}
+
 .checkbox {
   color: white;
   margin-bottom: 1rem;
